# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "iluria-export"
version = "0.1.0"
authors = ["Giovanni Bassi <giggio@giggio.net>"]
edition = "2018"

[features]
static = []

[profile.release]
lto = true

[dependencies]
clap = "2.33.3"
url = "2.2.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
rand = "0.8.3"
