# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "iluria-export"
version = "0.1.0"
authors = ["Giovanni Bassi <giggio@giggio.net>"]
edition = "2018"

[features]
static = []

[profile.release]
lto = true

[dependencies]
clap = "2.33.3"
csv = "1.1.5"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
# reqwest = "0.11.0"
reqwest  = { version = "0.11.0", features = ["blocking"] }
scraper = "0.12.0"
serde = { version = "1.0.123", features = ["derive"] }
url = "2.2.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
rand = "0.8.3"
